# asianfederation

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml
project/: Makefile  app_fixer.py  db.sqlite3  manage.sh  pyproject.toml
project/apps/home/: admin.py
project/apps/home/migrations/: 0001_initial.py  0002_aboutusmodel_goalmodel_calendarmodel_country_code_and_more.py  0002_imagemodel.py  0003_alter_calendarmodel_country_code.py  0003_gallerymodel_gallerymodeltranslation.py  0004_merge_20250208_2304.py  0005_commandmodel_eventcalendarmodel_and_more.py  0006_alter_commandmodeltranslation_position.py  0007_commandmodeltranslation_federation_and_more.py  0008_remove_commandmodeltranslation_position_and_more.py
project/apps/home/models/: __init__.py  images.py  models.py
project/apps/home/urls/: gallery.py  home.py
project/apps/home/views/: gallery.py  views.py
project/assets/about/styles/: style.css
project/assets/antidoping/styles/: antidoping.css
project/assets/base/scripts/: base.js  (+2 more)
project/config/: environment.py  settings.py  urls.py  wsgi.py
project/templates/: about-us.html  anti_doping.html  antidoping.html  command.html  events-calendar.html  gallery.html  history.html  home.html
project/templates/base/: base.html
ssl-certificate/h2hf.asia/: cert.pem  fullchain.pem  privkey.pem
ssl-certificate/lms-ba.uz/: cert.pem  fullchain.pem  privkey.pem
static/antidoping/styles/: antidoping.css
static/base/styles/: main.css
static/command/style/: command.css
static/detail/styles/: detail.css
(+21 files in other folders)
